base64 jpeg image support
